<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBgHome"
    tools:context=".Class.CRUD.AddActivity"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkGreen"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/optEad"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="18dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/earnings"
                            android:textColor="@color/colorSelect"
                            android:textSize="30sp" />
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/optSpd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/spd"
                            android:textColor="@color/colorSelectNo"
                            android:textSize="30sp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/optmn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/add_buttonadd"
                            android:textColor="@color/colorWhite"
                            android:textSize="55sp"
                            android:background="@color/colorDarkGreen"
                            />
                        <EditText
                            android:id="@+id/addmn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="textEnd"
                            android:paddingEnd="15dp"
                            android:textSize="35sp"
                            android:clickable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/null_money"
                            android:background="@color/colorDarkGreen"
                            android:textColor="@color/colorWhite"
                            tools:ignore="Autofill,LabelFor,RtlCompat,RtlSymmetry"
                            android:focusable="true"
                            android:inputType="textVisiblePassword" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/actName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/account"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:background="@color/colorDarkGreenAct"
                            />
                        <TextView
                            android:id="@+id/vexpress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            />
                        <TextView
                            android:id="@+id/vresult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/null_money"
                            android:visibility="gone"
                            />
                        <TextView
                            android:id="@+id/vValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/null_money"
                            android:visibility="gone"
                            />
                        <TextView
                            android:id="@+id/vultOp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            />
                    </LinearLayout>
                </LinearLayout>

                <!--Informação-->
                <!--Teclado-->
                <LinearLayout
                    android:id="@+id/keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="visible"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.5"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">
                        <Button
                            android:id="@+id/number_7"
                            style="@style/Numbers_Button"
                            android:text="@string/number_7"
                            />
                        <Button
                            android:id="@+id/number_8"
                            style="@style/Numbers_Button"
                            android:text="@string/number_8"
                            />
                        <Button
                            android:id="@+id/number_9"
                            style="@style/Numbers_Button"
                            android:text="@string/number_9"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.5"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">
                        <Button
                            android:id="@+id/number_4"
                            style="@style/Numbers_Button"
                            android:text="@string/number_4"
                            />
                        <Button
                            android:id="@+id/number_5"
                            style="@style/Numbers_Button"
                            android:text="@string/number_5"
                            />
                        <Button
                            android:id="@+id/number_6"
                            style="@style/Numbers_Button"
                            android:text="@string/number_6"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.5"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">
                        <Button
                            android:id="@+id/number_1"
                            style="@style/Numbers_Button"
                            android:text="@string/number_1"
                            />
                        <Button
                            android:id="@+id/number_2"
                            style="@style/Numbers_Button"
                            android:text="@string/number_2"
                            />
                        <Button
                            android:id="@+id/number_3"
                            style="@style/Numbers_Button"
                            android:text="@string/number_3"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.5"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">
                        <Button
                            android:id="@+id/btn_dot"
                            style="@style/Numbers_Button"
                            android:text="@string/dot"
                            />
                        <Button
                            android:id="@+id/number_0"
                            style="@style/Numbers_Button"
                            android:text="@string/number_0"
                            />
                        <ImageButton
                            android:id="@+id/backspace"
                            style="@style/Numbers_Button"
                            android:padding="30dp"
                            android:src="@drawable/delete"
                            android:scaleType="centerCrop"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">
                        <Button
                            android:id="@+id/btn_clean"
                            style="@style/Operator_button"
                            android:text="@string/cleanTxt"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:padding="2dp"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:id="@+id/btn_confirm"
                            style="@style/Operator_button"
                            android:text="@string/confirm"
                            android:layout_margin="5dp"
                            />
                        <Button
                            android:id="@+id/btn_cancel"
                            style="@style/Operator_button"
                            android:text="@string/cancel"
                            android:backgroundTint="@color/colorDarRed"
                            android:layout_margin="5dp"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bot_nav_add_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_m"
            android:paddingTop="10dp"
            app:elevation="0dp"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/add_navigation_menu" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>