<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bank_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/add_info"
            android:textColor="@color/colorDarkGrey"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:text="@string/name"
            android:textColor="@color/colorDarkGrey"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBottomSheet"
            />

        <EditText
            android:id="@+id/nameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLength="80"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/add_name"
            android:maxLines="1"
            android:textColor="@color/colorOff"
            android:textColorHint="@color/colorOff"
            android:textSize="22sp"
            android:inputType="textVisiblePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bankName"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bankValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:text="@string/value"
            android:textColor="@color/colorDarkGrey"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInfo"
            />
        <EditText
            android:id="@+id/valueInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLength="15"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/add_value"
            android:maxLines="1"
            android:textColor="@color/colorOff"
            android:textColorHint="@color/colorOff"
            android:textSize="22sp"
            android:text="@string/moneyCard"
            android:inputType="number"
            android:digits="0123456789.,"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bankValue"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/eatSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueInfo">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bankType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:text="@string/type_act"
                android:textColor="@color/colorDarkGrey"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                />
            <Spinner
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:id="@+id/spinnerBank"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="add"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageButton
            android:id="@+id/btnConAccount"
            android:layout_width="59dp"
            android:layout_height="57dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_confirm"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eatSpinner"
            app:layout_constraintVertical_bias="0.401"
            tools:ignore="UseAppTint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imgId"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/segoeui"
            android:text=""
            android:textColor="@color/colorDarkGrey"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>